<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_to_delete_account"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleting_your_account_will_delete_your_profile_permanently"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_will_not_delete_any_questions_posted_by_you_so_far_to_do_so_you_can_delete_it_from_your_posts"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_you_are_sure_and_want_to_delete_your_account_then_proceed"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/delete_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/del_acc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:text="@string/delete_account"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_margin="15dp"
        tools:ignore="RtlHardcoded" />
</LinearLayout>