<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">
    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/profile_bar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/main_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/profile_toolbar"
        android:padding="5dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:src="@drawable/dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="24sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="2"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/Zero_posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:text="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/posts"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/zero_favorites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:text="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="favorites"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_below="@+id/main_ll"
        android:layout_marginTop="10dp"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_stroke" />

    <LinearLayout
        android:layout_below="@id/edit_profile_btn"
        android:layout_above="@id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/change_my_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"/>

        <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/terms_and_privacy_policy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"/>

        <TextView
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/share_this_app"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"/>

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/give_us_feedback"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"/>

        <TextView
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/delete_my_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:text="@string/logout"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/toolbar_bg"
        android:textColor="@color/backgroundColor"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>