<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="2dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:weightSum="26">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avtar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:padding="1dp"
                android:src="@drawable/dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="24"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameOfAvtar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/dateOfPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:hint="@string/date"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/postedOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:visibility="visible"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_more_vert_black_24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/postedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="1dp"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:hint="@string/description"/>

        <ImageView
            android:id="@+id/postedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            android:layout_gravity="center"
            android:adjustViewBounds="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/cmnt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_chat_bubble_outline_black_24dp"/>

            <ImageView
                android:id="@+id/google_btn"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:padding="2dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="55dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/google_icon"/>

            <ImageView
                android:id="@+id/shre_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="98dp"
                android:src="@drawable/ic_share_black_24dp"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>